trunk/Archive2/b1/8c5278fc37eb4e/output
main.cpp:4:10: error: variable 'ptm' with type 'auto' has incompatible initializer of type '<overloaded function type>'
    auto ptm = &decltype(f)::operator();
         ^     ~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
